package edu.curtin.oose2024s2.assignment2;


/**
 * Entry point into the application. To change the package, and/or the name of this class, make
 * sure to update the 'mainClass = ...' line in build.gradle.
 */

public class Main {

    public static void main(String[] args) {

        Simulator simulation = new Simulator();

        simulation.run();
    }
}

