package edu.curtin.oose2024s2.assignment2.patterns.state;

public enum Status
{
    SINGLE_CONSTRUCTION, SINGLE, DUAL_CONSTRUCTION, DUAL
}
